--- a/index.html
+++ b/index.html
@@ -1,27 +1,45 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google Fonts  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Open+Sans:wght@300;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Open+Sans:wght@300;700&display=swap"
+        rel="stylesheet">
 
     <!-- FontAwesome  -->
     <script src="https://kit.fontawesome.com/e89570dc04.js" crossorigin="anonymous"></script>
 
     <!-- My css  -->
     <link rel="stylesheet" href="css/main.css">
-    
+
     <title>Tropical Paradise</title>
 </head>
+
 <body>
-    
+    <button class="burger-btn">
+        <div class="burger-btn_box">
+            <div class="burgers-btn_bars">
+            </div>
+        </div>
+    </button>
+
+    <nav class="nav"></nav>
+    <header class="header section">
+        <h1 class="header__heading">Tropical Pardaise</h1>
+        <p class="header__text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <a href="#offers" class="header__btn btn-special-animation">Poznaj ofertę</a>
+        <div class="white-block white-block-left"></div>
+
+    </header>
 
 
     <!-- My js  -->
     <script src="/js/main.js"></script>
 </body>
+
 </html>
