--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 <body>
     <button class="burger-btn">
-        <div class="burger-btn_box">
-            <div class="burgers-btn_bars">
+        <div class="burger-btn__box">
+            <div class="burger-btn__bars">
             </div>
         </div>
     </button>
@@ -37,6 +37,56 @@
 
     </header>
 
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
     <!-- My js  -->
     <script src="/js/main.js"></script>
