added dreams section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    
+
     <nav class="nav ">
         <div class="nav__items">
             <a href="#islands" class="nav__item">Wyspy</a>
@@ -38,7 +38,7 @@
     </button>
 
 
-    
+
     <header class="header section">
         <h1 class="header__heading">Tropical Pardaise</h1>
         <p class="header__text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -46,7 +46,37 @@
         <div class="white-block white-block-left"></div>
 
     </header>
+    <main>
+        <section class="dreams section-padding section white-section">
+            <div class="wrapper">
+                <h2 class="section-heading">Spełniaj marzenia</h2>
 
+                <div class="dreams__box">
+                    <div class="dreams__box-img ">
+                        <img src="/img/paradise-gbeed25bc5_640.jpg" class="dreams__img" alt="molo">
+                    </div>
+                    <div class="dreams__box-text">
+                        <h3 class="dreams__box-title">Wymarzone wakacje</h3>
+                        <p class="dreams__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi,
+                            praesentium? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore vel nemo
+                            nam architecto nulla eius!</p>
+                    </div>
+                </div>
+                <div class="dreams__box">
+                    <div class="dreams__box-img dreams__box-img--right">
+                        <img src="/img/bora-bora-g783d03ac7_640.jpg" class="dreams__img" alt="molo">
+                    </div>
+                    <div class="dreams__box-text dreams__box-text--right">
+                        <h3 class="dreams__box-title">Niezapomnaiane przygody</h3>
+                        <p class="dreams__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi,
+                            praesentium? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore vel nemo
+                            nam architecto nulla eius!</p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+    </main>
     <br>
     <br>
     <br>
