Island cards. Part 2

--- a/index.html
+++ b/index.html
@@ -90,15 +90,16 @@
             <div class="wrapper">
                 <h2 class="section-heading">Polecane wyspy</h2>
                 <div class="islands__cards">
-
                     <div class="islands__card" onclick="vote(0)">
+                        <!-- Przód karty -->
                         <div class="islands__card-img islands__card-img--first">
-                            <h3 class="islands__cards-img-title">Wyspa Tiki Taki</h3>
-                            <p class="islands__cards-img-info"><i class="fas fa-angle-double-right"></i> Więcej
+                            <h3 class="islands__card-img-title">Wyspa Tiki Taki</h3>
+                            <p class="islands__card-img-info"><i class="fas fa-angle-double-right"></i> Więcej
                                 informacji</p>
                         </div>
+                        <!-- Tył karty  -->
                         <div class="islands__card-info">
-                            <h3 class="islands__cards-img-title">Wyspa Tiki Taki</h3>
+                            <h3 class="islands__card-img-title">Wyspa Tiki Taki</h3>
                             <ul class="islands__card-info-list">
                                 <li class="islands__card-info-list-item">Piękna okolica</li>
                                 <li class="islands__card-info-list-item">Ciepła woda</li>
@@ -114,12 +115,12 @@
 
                     <div class="islands__card" onclick="vote(0)">
                         <div class="islands__card-img islands__card-img--second">
-                            <h3 class="islands__cards-img-title">Wyspa Toca Toca</h3>
-                            <p class="islands__cards-img-info"><i class="fas fa-angle-double-right"></i> Więcej
+                            <h3 class="islands__card-img-title">Wyspa Toca Toca</h3>
+                            <p class="islands__card-img-info"><i class="fas fa-angle-double-right"></i> Więcej
                                 informacji</p>
                         </div>
                         <div class="islands__card-info">
-                            <h3 class="islands__cards-img-title">Wyspa Toca Toca</h3>
+                            <h3 class="islands__card-img-title">Wyspa Toca Toca</h3>
                             <ul class="islands__card-info-list">
                                 <li class="islands__card-info-list-item">Piękna okolica</li>
                                 <li class="islands__card-info-list-item">Ciepła woda</li>
@@ -135,12 +136,12 @@
 
                     <div class="islands__card" onclick="vote(0)">
                         <div class="islands__card-img islands__card-img--third">
-                            <h3 class="islands__cards-img-title">Wyspa Nobu</h3>
-                            <p class="islands__cards-img-info"><i class="fas fa-angle-double-right"></i> Więcej
+                            <h3 class="islands__card-img-title">Wyspa Nobu</h3>
+                            <p class="islands__card-img-info"><i class="fas fa-angle-double-right"></i> Więcej
                                 informacji</p>
                         </div>
                         <div class="islands__card-info">
-                            <h3 class="islands__cards-img-title">Wyspa Nobu</h3>
+                            <h3 class="islands__card-img-title">Wyspa Nobu</h3>
                             <ul class="islands__card-info-list">
                                 <li class="islands__card-info-list-item">Piękna okolica</li>
                                 <li class="islands__card-info-list-item">Ciepła woda</li>
