--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         </div>
                         <!-- Tył karty  -->
                         <div class="islands__card-info">
-                            <h3 class="islands__card-img-title">Wyspa Tiki Taki</h3>
+                            <h3 class="islands__card-info-title">Wyspa Tiki Taki</h3>
                             <ul class="islands__card-info-list">
                                 <li class="islands__card-info-list-item">Piękna okolica</li>
                                 <li class="islands__card-info-list-item">Ciepła woda</li>
@@ -120,7 +120,7 @@
                                 informacji</p>
                         </div>
                         <div class="islands__card-info">
-                            <h3 class="islands__card-img-title">Wyspa Toca Toca</h3>
+                            <h3 class="islands__card-info-title">Wyspa Toca Toca</h3>
                             <ul class="islands__card-info-list">
                                 <li class="islands__card-info-list-item">Piękna okolica</li>
                                 <li class="islands__card-info-list-item">Ciepła woda</li>
@@ -141,7 +141,7 @@
                                 informacji</p>
                         </div>
                         <div class="islands__card-info">
-                            <h3 class="islands__card-img-title">Wyspa Nobu</h3>
+                            <h3 class="islands__card-info-title">Wyspa Nobu</h3>
                             <ul class="islands__card-info-list">
                                 <li class="islands__card-info-list-item">Piękna okolica</li>
                                 <li class="islands__card-info-list-item">Ciepła woda</li>
