Added reviews section.Part 1

--- a/index.html
+++ b/index.html
@@ -192,12 +192,48 @@
                             <button class="offers__option-btn btn-special-animation">Wybierz</button>
                         </div>
                     </div>
-
-
-
-
                 </div>
+            </div>
+        </section>
 
+        <!-- REVIEWS -->
+
+        <section class="reviews section-padding section white-block"  id="reviews">
+            <h2 class="section-heading">Opinie</h2>
+            <div class="wrapper">
+                <div class="reviews__boxes">
+
+                    <div class="reviews__box">
+                        <div class="reviews__box-img">
+                            <img src="/img/review1.jpg" alt="Ciemno-skóra kobieta w czarnych włosach">
+                        </div>
+                        <div class="reviews__box-info">
+                            <div class="reviews__box-quote"><i class="fas fa-quote-right"></i></div>
+                            <p class="reviews__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam corrupti saepe eligendi quam tempora distinctio.</p>
+                            <strong>Anna Nowak</strong>
+                        </div>
+                    </div>
+                    <div class="reviews__box">
+                        <div class="reviews__box-img">
+                            <img src="/img/review2.jpg" alt="Facet w okularach">
+                        </div>
+                        <div class="reviews__box-info">
+                            <div class="reviews__box-quote"><i class="fas fa-quote-right"></i></div>
+                            <p class="reviews__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam corrupti saepe eligendi quam tempora distinctio.</p>
+                            <strong>Jan Kowalski</strong>
+                        </div>
+                    </div>
+                    <div class="reviews__box">
+                        <div class="reviews__box-img">
+                            <img src="/img/review3.jpg" alt="Twarz jasnoskórej blondynki">
+                        </div>
+                        <div class="reviews__box-info">
+                            <div class="reviews__box-quote"><i class="fas fa-quote-right"></i></div>
+                            <p class="reviews__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam corrupti saepe eligendi quam tempora distinctio.</p>
+                            <strong>Maria Wiśniewska</strong>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
