Reviews section is finish

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!-- FontAwesome  -->
     <script src="https://kit.fontawesome.com/e89570dc04.js" crossorigin="anonymous"></script>
 
+    <!-- SLIC  -->
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+
     <!-- My css  -->
     <link rel="stylesheet" href="css/main.css">
 
@@ -198,10 +201,10 @@
 
         <!-- REVIEWS -->
 
-        <section class="reviews section-padding section white-block"  id="reviews">
+        <section class="reviews section-padding section white-block" id="reviews">
             <h2 class="section-heading">Opinie</h2>
             <div class="wrapper">
-                <div class="reviews__boxes">
+                <div class="reviews__boxes ">
 
                     <div class="reviews__box">
                         <div class="reviews__box-img">
@@ -209,7 +212,8 @@
                         </div>
                         <div class="reviews__box-info">
                             <div class="reviews__box-quote"><i class="fas fa-quote-right"></i></div>
-                            <p class="reviews__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam corrupti saepe eligendi quam tempora distinctio.</p>
+                            <p class="reviews__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Laboriosam corrupti saepe eligendi quam tempora distinctio.</p>
                             <strong>Anna Nowak</strong>
                         </div>
                     </div>
@@ -219,7 +223,8 @@
                         </div>
                         <div class="reviews__box-info">
                             <div class="reviews__box-quote"><i class="fas fa-quote-right"></i></div>
-                            <p class="reviews__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam corrupti saepe eligendi quam tempora distinctio.</p>
+                            <p class="reviews__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Laboriosam corrupti saepe eligendi quam tempora distinctio.</p>
                             <strong>Jan Kowalski</strong>
                         </div>
                     </div>
@@ -229,7 +234,8 @@
                         </div>
                         <div class="reviews__box-info">
                             <div class="reviews__box-quote"><i class="fas fa-quote-right"></i></div>
-                            <p class="reviews__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam corrupti saepe eligendi quam tempora distinctio.</p>
+                            <p class="reviews__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Laboriosam corrupti saepe eligendi quam tempora distinctio.</p>
                             <strong>Maria Wiśniewska</strong>
                         </div>
                     </div>
@@ -240,59 +246,19 @@
 
 
     </main>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+  
+    <!-- jquery  -->
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
+    <!-- SLIC  -->
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
     <!-- My js  -->
+    <script src="js/slick.js"></script>
     <script src="/js/main.js"></script>
+
 </body>
 
 </html>
